@@ -62,6 +62,7 @@ YOUTRACK
     IP-1791 Error message when calculating disk quota - Cannot start new SQL transaction on an automatic reconnect
     IP-1792 When changing the document root of a domain with a folder that holds a space in its name, the Apache2 server is crashing
     IP-1793 CLIENT_DOMAIN_ALT_URLS Value in preseed file
+    IP-1795 When editing a mailbox, the quota value is reset to 10 MiB while it should stay to it current quota value
 
 ------------------------------------------------------------------------------------------------------------------------
 1.5.3
